media/qbittorrent/base/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbt-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`torrent.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: qbt-svc
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: qbittorrent-tcp-connect
spec:
  entryPoints:
    - random-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: svc-qbittorrent-tcp
          port: 6881
